--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,35 @@
     --maim-color: #757575;
     --secondary-color: #212121;
     --accent-color: #2196F3;
+    --section-ptp: 94px;
+    --section-pbtm: 94px;
+    --background-color: #2F303A;
 }
 body {
     font-family:var(--main-font) ;
     color: var(--maim-color);
-
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+}
+
+ul,
+ol {
+    margin: 0;
+    padding: 0;
+}
+
+img {
+    display: block;
+}
+
 
 .reset-link {
     text-decoration: none;
@@ -20,33 +43,37 @@ body {
 .reset-adress {
     font-style: normal;
 }
-.logo {
+
+.visually-hidden {
+    position: absolute !important;
+    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+    clip: rect(1px, 1px, 1px, 1px);
+    padding: 0 !important;
+    border: 0 !important;
+    height: 1px !important;
+    width: 1px !important;
+    overflow: hidden;
+}
+
+.logo-up {
     font-family:var(--secondary-font);
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
-    /* identical to box height */
     letter-spacing: 0.03em;
     color: var(--accent-color);
+    margin-right: 93px ;
 }
+
 .logo-header {
     font-family:var(--secondary-font);
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
-    /* identical to box height */
     letter-spacing: 0.03em;
     color: var(--secondary-color);
 }
-.logo-footer {
-    font-family:var(--secondary-font);
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    /* identical to box height */
-    letter-spacing: 0.03em;
-    /* color: #FFFFFF; */
-}
+
 .navigation-link {
     font-weight: 500;
     font-size: 14px;
@@ -54,6 +81,19 @@ body {
     letter-spacing: 0.02em;
     color: var(--secondary-color);
 }
+
+.navigation-list-item:not(:last-child) {
+    margin-right: 50px;
+}
+
+.upper-contact-items {
+    margin-left: auto;
+}
+
+.mail-us {
+    margin-right: 50px;
+}
+
 .navigation-link:hover,
 .navigation-link:focus {
     color: var(--accent-color);
@@ -64,48 +104,96 @@ body {
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--maim-color);
+    
 }
+
+.header {
+    display: flex;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    
+}
+
+.navigation-list {
+    display: flex;
+    align-items: center;
+}
+
+.upper-contact-items {
+    display: flex;
+}  
+
+.header .container {
+  align-items: center;
+}
+
+.container {
+    display: flex;
+    width: 1200px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    
+}
+
+/*---------- HERO -----------*/
+.hero .container {
+    display: block;
+}
+
+.hero {
+    background-color:var(--background-color);
+    padding-top: 200px;
+    padding-bottom:200px;
+}
+
+.hero-title {
+    text-align: center;
+    margin-bottom: 30px;
+   }
+
+/*---------- HERO -----------*/
+.modal-button:focus {
+ outline: var(--accent-color)
+}   
+
 .modal-button {
+    min-width: 200px;
+    padding: 10px 32px;
+    text-align: center;
+    margin: 0 auto;
+    display: block;
+    border-radius: 4px;
+    border-color: var(--accent-color);
+    background-color: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
     font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
     text-transform:none;
     letter-spacing: 0.06em;
     color: #FFFFFF;
-    cursor: pointer;
-    background-color:var(--accent-color);
 }
 .lower-contact-links {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    /* color: rgba(255, 255, 255, 0.6); */
+    color: #ffffff99;
 }
 .mail-us:hover,
 .mail-us:focus {
     color: var(--accent-color);
+    border-color: var(--accent-color);
 }
 .map-link {
     font-size: 14px;
     line-height: 1.71px;
     letter-spacing: 0.03em;
-    /* color: #FFFFFF; */
-}
-.prtf-button {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-     /* text-align: center; */
-    letter-spacing: 0.03em;
-    color: var(--secondary-color);
-    cursor: pointer;
-}
-.prtf-button:hover,
-.prtf-button:focus {
     color: #FFFFFF;
-    background-color:var(--accent-color);
-} 
+}
+
 .hero-title {
     font-weight: 900;
     font-size: 44px;
@@ -113,62 +201,258 @@ body {
     /* text-align: center; */
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    /* color: #FFFFFF; */
+    color: #FFFFFF;
 }
+
+.worth {
+    padding-top: 94px;
+    padding-bottom: 47px;
+}
+
+.worth-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+}
+
+.worth-element {
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc(100% / 4 - 30px);
+}
+
+.worth-description-representation {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    text-align: start;
+}
+
 .worth-items {
+    margin-bottom: 10px ;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color:var(--secondary-color);
+    text-align: start;
 }
+
 .worth-description {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
+    text-align: start;
 }
+
+.wdwd {
+    padding-top: 47px;
+    padding-bottom: 94px;
+}
+
+.wdwd .container {
+    display: block;
+}   
+
 .wdwd-title {
+    margin-bottom: 50px;
+    text-align: center;
     font-weight:700;
     font-size: 36px;
     line-height: 1.16;
-    /* text-align: center; */ 
     letter-spacing: 0.03em;
     color: var(--secondary-color);
 }
+
+.wdwd-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+}
+
+.wdwd-item{
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc(100% / 3 - 30px);
+}
+
+.team .container {
+    display: block;
+}
+
+.team {
+    background-color: #F5F4FA ;
+    padding-top: 94px;
+    padding-bottom: var(--section-pbtm);
+}
+
 .team-title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
-    /* text-align: center; */
+    text-align: center;
     letter-spacing: 0.03em;
     color: var(--secondary-color);
+    margin-bottom: 50px;
+}
+.team-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+}
+
+.team-list-item {
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc(100% / 4 - 30px);
+} 
+
+.team-list-item-representation {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+
 }
 .unit-name {
+    margin-bottom: 10px ;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.18;
-    /* identical to box height */
-    /* text-align: center; */
+    text-align: center;
     letter-spacing: 0.03em;
     color: var(--secondary-color);
+
 }
 .unit-ps {
     font-size: 16px;
     line-height: 1.18;
-    /* identical to box height */
-    /* text-align: center; */
+    text-align: center;
     letter-spacing: 0.03em;
 }
+
 .product-name {
+    margin-bottom: 4px;
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
     color:var(--secondary-color);
 }
+
 .product-type {
     font-size: 16px;
     line-height: 1.87;
     letter-spacing: 0.03em;
+}
+
+.footter .container {
+    display: inline-block; 
+}
+
+.footter {
+    background-color: var(--background-color);
+    display: flex;
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+
+.logo-low {
+    font-family:var(--secondary-font);
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    color: var(--accent-color);
+    display: inline-block;
+    margin-bottom: 20px;
+}
+
+.logo-footer {
+    font-family:var(--secondary-font);
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+}
+
+.logotype {
+    margin-bottom: 20px;
+}
+
+.bottom-addres-item:not(:last-child) {
+    margin-bottom: 9px;
+}
+
+.product .container {
+   display: flex;
+   display: block;
+}
+
+ .filter-list {
+    justify-content: center;
+    padding-bottom: 25px;
+    display: flex;
+}
+
+.filter-list-item:not(:last-child) {
+   margin-right: 8px;
+}
+
+.prtf-button:focus {
+ outline: var(--accent-color)
+}
+
+.prtf-button {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--secondary-color);
+    border-color: #F5F4FA;
+    border-radius: 4px;
+    padding: 6px 22px;
+    min-width: 73px;
+    }  
+
+.prtf-button:hover,
+.prtf-button:focus {
+    cursor: pointer;
+    color: #FFFFFF;
+    background-color: var(--accent-color);
+    border-color: var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+    0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}   
+
+.products {
+    padding-top: 25px;
+    padding-bottom: 94px;
+    display: flex;
+}
+
+.products-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px; 
+}
+
+.product-list-item {
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc(100% / 9 - 30px);
+}
+
+.product-image-represantation {
+   padding: 20px 24px;
+   background: #FFFFFF;
+   border: 1px solid #EEEEEE; 
 }
