--- a/css/styles.css
+++ b/css/styles.css
@@ -178,7 +178,7 @@ img {
     margin: 0 auto;
     display: block;
     border-radius: 4px;
-    border-color: var(--accent-color);
+    border: none;
     background-color: var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
